--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <section id="mainGrid">
             <div id="stage" class="mainGridArea">
                 <img src="images/stage.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
                 <p1>Landmark stage playing
                     host to local
@@ -41,48 +41,49 @@
             </div>
             <div id="chalkboard menu" class="mainGridArea">
                 <img src="images/chalkboard menu.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
                 <p2>Chalkboard menu
-                    more consistent
+                    more consistent<br>
                     than the Ten
                     Commandments.</p2>
             </div>
             <div id="reuben" class="mainGridArea">
                 <img src="images/reuben.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
-                <p3>The OG: our Reuben sandwich.</p3>
+                <p3>The OG, our Reuben sandwich.<br> 
+                    Also available vegetarian.</p3>
             </div>
             <div id="sandwich fashion show" class="mainGridArea">
                 <img src="images/sandwich fashion show.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
                 <p4>If you can't choose,
-                    try every single
+                    try every single<br>
                     item until we run
                     out of ingredients.</p4>
             </div>
             <div id="dining room stage" class="mainGridArea">
                 <img src="images/dining room stage.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
                 <p5>Tables crucial to
-                    your experience,
+                    your experience,<br>
                     otherwise you'd be
                     eating on the floor.</p5>
             </div>
             <div id="neon sign" class="mainGridArea">
                 <img src="images/neon sign.png"
-                height="50%"
-                width="50%">
+                height="66%"
+                width="66%">
                 <br>
                 <p6>Legendary neon,
-                    permanently on,
+                    permanently on,<br>
                     your North Star,
                     a beacon of hope.</p6>
             </div>
@@ -97,18 +98,18 @@
             <section id="reviewGrid">
                 <div id="lioness" class="reviewGridArea">
                     <img src="images/lioness.jpg"
-                    height="80%"
-                    width="38%">
+                    height="100%"
+                    width="44%">
                 </div>
                 <div id="vinodhini" class="reviewGridArea">
                     <img src="images/vinodhini.jpg"
-                    height="80%"
-                    width="38%">
+                    height="100%"
+                    width="44%">
                 </div>
                 <div id="manivannan" class="reviewGridArea">
                     <img src="images/manivannan.jpg"
-                    height="80%"
-                    width="38%">
+                    height="100%"
+                    width="44%">
                 </div>
             </section>
             <footer>
